<resources>
    <string name="app_name">Walkwalkwalk</string>
    <string name="login_ID">아이디</string>
    <string name="login_pwd">비밀번호</string>
    <string name="or">또는</string>
    <string name="login">로그인</string>
    <string name="join">회원가입</string>
    <string name="next">다음</string>
    <string name="pwd_check">비밀번호 확인</string>
    <string name="pwd_check_done">비밀번호가 일치합니다.</string>
    <string name="pwd_check_different">비밀번호가 일치하지 않습니다.</string>
    <string name="pwd_check_no">영소문자, 특수문자, 숫자를 포함하여 8자 이상 입력하시오.</string>
    <string name="name">이름</string>
    <string name="phonenumber">전화번호</string>
    <string name="from">거주지 (도로명 주소)</string>
    <string name="id_check">아이디 중복 확인</string>

    <string name="bookmark">즐겨찾기</string>
    <string name="bookmark_add">즐겨찾기 추가</string>
    <string name="opp">임시</string>
    <string name="bookmark_group">즐겨찾기 그룹</string>

    <string name="home">Home</string>
    <string name="search">search</string>
    <string name="alarm">alarm</string>
    <string name="setting">setting</string>

    <string name="txt_address_string">받은 주소</string>
    <string name="from_check">가주지 가져오기</string>
    <string name="pass">본인 인증</string>
    <string name="choose_from">주소를 선택하시오.</string>
</resources>