<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.JoinActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="102dp"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="57dp"
            android:src="@drawable/walklogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginTop="30dp"
            android:text="@string/login_ID"
            android:textColor="@color/txtcolor"
            android:textSize="13sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/txt_background"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/join_id_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:padding="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginTop="12dp"
            android:text="@string/login_pwd"
            android:textColor="@color/txtcolor"
            android:textSize="13sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/txt_background"
            app:boxBackgroundMode="none"
            app:passwordToggleEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/join_pwd_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:padding="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginTop="12dp"
            android:text="@string/pwd_check"
            android:textColor="@color/txtcolor"
            android:textSize="13sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/txt_background"
            app:boxBackgroundMode="none"
            app:passwordToggleEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/join_pwd_txt_check"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:padding="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/join_pwd_check_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:text="@string/pwd_check"
            android:textColor="@color/txtcolor"
            android:textSize="13sp"
            android:visibility="visible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginTop="72dp"
            android:text="@string/name"
            android:textColor="@color/txtcolor"
            android:textSize="13sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/txt_background"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/join_name_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:padding="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginTop="14dp"
            android:text="@string/phonenumber"
            android:textColor="@color/txtcolor"
            android:textSize="13sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/txt_background"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/join_number_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:padding="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/join_pass_btn"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="19dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/pass"
            android:background="@drawable/btn_background_pass" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginTop="14dp"
            android:text="@string/from"
            android:textColor="@color/txtcolor"
            android:textSize="13sp" />

        <Spinner
            android:id="@+id/join_from_choose"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/txt_background"
             />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/join_from_check_btn"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="19dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/from_check"
            android:background="@drawable/btn_background" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/join_next_btn"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/next"
            android:background="@drawable/btn_background" />

    </LinearLayout>

</RelativeLayout>