<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:layout_width="281.13dp"
            android:layout_height="122dp"
            android:layout_gravity="center"
            android:layout_marginTop="171dp"
            android:src="@drawable/walklogo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="137dp"
            android:paddingTop="2dp"
            android:background="@drawable/txt_background"
            android:textColorHint="@color/txthint"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/start_id_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_ID"
                android:inputType="text"
                android:padding="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingTop="2dp"
            android:background="@drawable/txt_background"
            app:passwordToggleEnabled="false"
            android:textColorHint="@color/txthint"
            app:boxBackgroundMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/start_pwd_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_pwd"
                android:padding="0dp"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_login_btn"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="92dp"
            android:background="@drawable/btn_background"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_join_btn"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:background="@drawable/btn_background"
            android:text="@string/join"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="291dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="27dp"
            android:src="@drawable/login_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="@string/or"
            android:textColor="@color/txtcolor"
            android:textSize="8sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/start_naver_login"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginStart="105dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/naverlogin" />


            <ImageView
                android:id="@+id/start_google_login"
                android:layout_width="67dp"
                android:layout_height="67dp"
                android:src="@drawable/googlelogin"/>

            <ImageView
                android:id="@+id/start_kakao_login"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="26dp"
                android:src="@drawable/kakaologin" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>